feat: site now updates with constant framerate

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     </head>
     <body>
         <pre style="position: absolute; color: #fed053; font-size: 16px;">
-Use <b>wasd</b> to move, <b>q</b> to cast a ray
-<b>Click on window</b> to start movement
+Use <i>(works only if mesh is loaded)</i>:
+    <b>wasd</b> to move around
+    <b>Space</b> to move up
+    <b>Shift</b> to move down
+    <b>q</b> to cast a ray
 <b>Click button</b> below to upload a file
+<b>Click on window</b> to start movement
         </pre>
 
         <div class="container">
