feat: added perfromance report

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-        <pre style="position: absolute; color: #fed053; font-size: 16px;">
+        <pre class="text">
 Use <i>(works only if mesh is loaded)</i>:
     <b>wasd</b> to move around
     <b>Space</b> to move up
@@ -16,6 +16,8 @@ Use <i>(works only if mesh is loaded)</i>:
 <b>Click button</b> below to upload a file
 <b>Click on window</b> to start movement
         </pre>
+
+        <pre class="text" id="output"></pre>
 
         <div class="container">
             <section class="row section">
