--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </label>
         </div>
 
-        <pre class="info-box" id="app-data" style="visibility: hidden;"></pre>
+        <pre class="info-box" id="app-data"></pre>
 
         <script id="shader-vs" type="x-shader/x-vertex">
             #version 300 es
