file moved next to index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             }
         </script>
 
-        <script src="web/js/coi-serviceworker.min.js"></script>
+        <script src="coi-serviceworker.min.js"></script>
         <script src="web/js/twgl-full.min.js"></script>
         <script src="web/js/rmilib_wasm.js"></script>
         <script src="web/js/camera.js"></script>
