--- a/index.html
+++ b/index.html
@@ -4,37 +4,45 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="web/css/style.css">
         <title>Demo</title>
-
     </head>
     <body>
         <canvas id="canvas"></canvas>
+        
+        <dialog open id="dialog" class="center-message box">
+            Allow parallel execution?
+            <br>
+            <div class="hor-options">
+                <span class="label option" onclick="loadParallelLibVersion();">Yes</span>
+                <span class="label option" onclick="loadSeqLibVersion();">No</span>
+            </div>
+        </dialog>
 
-        <div class="info-box" id="help-message">
+        <div class="box center-message" id="menu">
 <pre class="row"><b>Left click on canvas</b> to start movement
 <b>wasd</b> to move around
 <b>Space</b> to move up
 <b>Shift</b> to move down
 <b>Left Click</b> to cast a ray</pre>
 
-            <div class="row" style="display: flex;">
-                <input id="threads-count" type="range" min="1" max="8" step="1" value="2" oninput="this.nextElementSibling.value = this.value + ' thread(-s)'"/>
-                <output>2 thread(-s)</output>
+            <div id="parallel-section" class="row option" style="display: flex; align-text: center;">
+                <input id="threads-count" disabled type="range" min="1" max="8" step="1" value="1" oninput="this.nextElementSibling.value = this.value + ' thread(-s)'"/>
+                <output>1 thread(-s)</output>
             </div>
 
-            <div class="row" style="display: flex; justify-content: space-around; gap: 5px;">
-                <span class="radio-option">
-                    <input id="kdtree-option" class="radio-input" type="radio" name="tree" checked="checked" value=1 onclick="onRadioChanged(this);"/>
-                    <label for="kdtree-option" class="radio-label">kd-tree</label>
+            <div class="row hor-options">
+                <span class="option">
+                    <input id="kdtree-option" type="radio" name="tree" checked value=1 onclick="onRadioChanged(this);"/>
+                    <label for="kdtree-option" class="label">kd-tree</label>
                 </span>
 
-                <span class="radio-option">
-                    <input id="quadtree-option" class="radio-input" type="radio" name="tree" value=2 onclick="onRadioChanged(this);"/>
-                    <label for="quadtree-option" class="radio-label">quadtree</label>
+                <span class="option">
+                    <input id="quadtree-option" type="radio" name="tree" value=2 onclick="onRadioChanged(this);"/>
+                    <label for="quadtree-option" class="label">quadtree</label>
                 </span>
 
-                <span class="radio-option">
-                    <input id="octree-option" class="radio-input" type="radio" name="tree" value=3 onclick="onRadioChanged(this);"/>
-                    <label for="octree-option" class="radio-label">octree</label>
+                <span class="option">
+                    <input id="octree-option" type="radio" name="tree" value=3 onclick="onRadioChanged(this);"/>
+                    <label for="octree-option" class="label">octree</label>
                 </span>
             </div>
 
@@ -44,7 +52,7 @@
             </label>
         </div>
 
-        <pre class="info-box" id="app-data"></pre>
+        <pre class="box" id="app-data"></pre>
 
         <script id="shader-vs" type="x-shader/x-vertex">
             #version 300 es
@@ -76,7 +84,7 @@
 
             void main(void) {
                 vec4 color = texture(u_texture, v_texcoord);
-                if (color.a < 0.1) {
+                if (color.a == 0.0) {
                     discard;
                 } else {
                     outColor = color;
@@ -84,9 +92,7 @@
             }
         </script>
 
-        <script src="coi-serviceworker.min.js"></script>
         <script src="web/js/twgl-full.min.js"></script>
-        <script src="web/js/rmilib_wasm.js"></script>
         <script src="web/js/camera.js"></script>
         <script src="web/js/points.js"></script>
         <script src="web/js/mesh.js"></script>
