fix: removed text-align

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <b>Space</b> / <b>Shift</b> to move up / down
 <b>Left Click</b> to cast a ray</pre>
 
-            <div class="row option" style="display: flex; align-text: center;">
+            <div class="row option" style="display: flex;">
                 <input id="threads-count" disabled type="range" min="1" max="8" step="1" value="1" oninput="this.nextElementSibling.value = this.value + ' thread(-s)'"/>
                 <output>1 thread(-s)</output>
             </div>
