bufferInfo and VAO encapsulated in separate class

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         </script>
 
         <script src="web/js/twgl-full.min.js"></script>
+        <script src="web/js/drawable.js"></script>
         <script src="web/js/camera.js"></script>
         <script src="web/js/intersection_handler.js"></script>
         <script src="web/js/mesh.js"></script>
