Added screenshot button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <pre class="row"><b>Left click on canvas</b> to start movement
 <b>wasd</b> to move around
 <b>Space</b> / <b>Shift</b> to move up / down
-<b>Left Click</b> to cast a ray</pre>
+<b>Left Click</b> to cast a ray
+<b>Enter</b> to take screenshot</pre>
 
             <div class="row option" style="display: flex;">
                 <input id="threads-count" disabled type="range" min="1" max="8" step="1" value="1" oninput="this.nextElementSibling.value = this.value + ' thread(-s)'"/>
