fix: median option value

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     </span>
 
                     <span class="option">
-                        <input id="mid-option" type="radio" name="splitter" value="middle" onclick="updateTree()"/>
-                        <label for="mid-option" class="label">Middle</label>
+                        <input id="median-option" type="radio" name="splitter" value="median" onclick="updateTree()"/>
+                        <label for="median-option" class="label">Median</label>
                     </span>
                 </div>
             </div>
